TWC3167-2875: Flex-overlapping pop up changes, PS pop up check box fixes, file attachment select button fixes (#1220)

--- a/Intel.MyDeals/Client/src/app/contract/pricingTableEditor/pricingTableEditor.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/pricingTableEditor/pricingTableEditor.component.css
@@ -305,3 +305,7 @@ kendo-dialog-actions.pteokbtnstyle.alter-btns-ok button.mykbtnstyles:hover {
     background-color: #1a3e6f !important;
     padding: 0px !important;
 }
+
+.flex-overlapping-deals mat-dialog-container {
+    padding: 0;
+}
